@@ -7,7 +7,7 @@ Rgas=286.0;
 rhoref=1;
 aref=300;
 
-Mx=7;
+Mx=9;
 My=0.0;
 P=10200;
 T=300;
@@ -213,7 +213,7 @@ Init(
 Disc(
   NavierStokesPerfect(
     zetaA1=0.3e0;    {conditions the eigenvalue of the A jacobian}
-    zetaA2=0.3e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
+    zetaA2=0.01e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCL(
     FLUX=FLUX_FDS;
@@ -225,13 +225,13 @@ Disc(
     EIGENVALCOND=EIGENVALCOND_PECLET; 
   );
   MUSCLplus(
-    FLUX=FLUX_FDSplusMultiD;
+    FLUX=FLUX_FDSplusFilter;
     numiter=2;
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
-    AOWENO_gammalo=0.85;
-    AOWENO_gammahi=0.85;
-    INTERPOL=INTERPOL_AOWENO5;
+    AOWENO_gammalo=0.95;
+    AOWENO_gammahi=0.9999;
+    INTERPOL=INTERPOL_AOWENO7;
     EIGENVALCOND=EIGENVALCOND_PARENT; 
   );
   FVS(
