@@ -145,16 +145,16 @@ Init(
 Disc(
   NavierStokesPerfect(
     zetaA1=0.0e0;    {conditions the eigenvalue of the A jacobian}
-    zetaA2=0.3;  {eigenvalue clipping factor: 2.0-20.0}
+    zetaA2=0.01;  {eigenvalue clipping factor: 2.0-20.0}
   );
   MUSCLplus(
     FLUX=FLUX_FDSplus;
-    numiter=2;
+    numiter=3;
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.95;
-    INTERPOL=INTERPOL_AOWENO5;
+    AOWENO_gammahi=0.9999;
+    INTERPOL=INTERPOL_AOWENO7;
     EIGENVALCOND=EIGENVALCOND_PARENT; 
   );
   MUSCL(
@@ -162,10 +162,10 @@ Disc(
     AVERAGING=AVERAGING_ARITH;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.999999;
-    INTERPOL=INTERPOL_AOWENO9;
+    AOWENO_gammahi=1-1e-4;
+    INTERPOL=INTERPOL_AOWENO7;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
-    FACEINTEG=FACEINTEG_AOWENO5; 
+    FACEINTEG=FACEINTEG_CENTRAL3; 
   );
   FVS(
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
