@@ -3,7 +3,7 @@
 #define _RESCONV_DELTA_LAMBDA_STORAGE
 #define _RESCONV_POSITIVITY_PRESERVING
 //#define _RESCONV_INCLUDES_DIFFUSION
-#define hbw_resconv_fluid 3  //maximum half bandwidth of stencil (excluding center node)
+#define hbw_resconv_fluid 4  //maximum half bandwidth of stencil (excluding center node)
 #define hbw_resconvplasma_fluid 1  //half bandwidth of stencil that depends on emfield mem props
 #define CONVJACOBIAN CONVJACOBIAN_FVSPLUS
 #define _RESCONV_ACTIONNAME "MUSCLplus"
